--- a/info.yaml
+++ b/info.yaml
@@ -19,7 +19,7 @@ documentation:
   title:        "Vector dot product"      # Project title
   description:  "Compute the dot product of two 2x1 vectors each containing 2 bit integers"      # Short description of what your project does
   how_it_works: "a := in[0:1], b := in[2:3], c := in[4:5], d := in[6:7] - [a,b,c,d] => [ac * bd]"      # Longer description of how the project works
-  how_to_test:  ""      # Instructions on how someone could test your project, include things like what buttons do what and how to set the clock if needed
+  how_to_test:  "set input to 11011010 => which means [11,01]⋅[10,10] => as ints [3,1]⋅[2,2] => output should be 00001000 => (3*2) + (1*2) = 8"      # Instructions on how someone could test your project, include things like what buttons do what and how to set the clock if needed
   external_hw:  ""      # Describe any external hardware needed
   language:     "wokwi" # other examples include Verilog, Amaranth, VHDL, etc
   doc_link:     ""      # URL to longer form documentation, eg the README.md in your repository
